# nnsimple-exercises

./: CMakeLists.txt  CURRICULUM.md  EXERCISE.md  EXERCISES.md  README.md  Readme.MD  pyproject.toml
include/: CMakeLists.txt
include/NNSimple/: CMakeLists.txt  NNSimpleDialect.h  NNSimpleDialect.td  NNSimpleOps.h  NNSimpleOps.td  NNSimplePasses.h  NNSimplePasses.td  NNSimpleTypes.h  NNSimpleTypes.td
include/NNSimple-c/: Dialects.h
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Dialects.cpp
lib/NNSimple/: CMakeLists.txt  NNSimpleDCE.cpp  NNSimpleDialect.cpp  NNSimpleFuseMulAdd.cpp  NNSimpleLinalgLowering.cpp  NNSimpleOps.cpp  NNSimplePasses.cpp  NNSimpleTypes.cpp
nnsimple-opt/: CMakeLists.txt  nnsimple-opt.cpp
nnsimple-plugin/: CMakeLists.txt  nnsimple-plugin.cpp
nnsimple-translate/: CMakeLists.txt  nnsimple-translate.cpp
python/: CMakeLists.txt  NNSimpleExtensionNanobind.cpp
python/mlir_nnsimple/dialects/: NNSimpleOps.td  nnsimple_nanobind.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/CAPI/: CMakeLists.txt  nnsimple-capi-test.c
test/Integration/: add-relu-e2e.mlir
test/NNSimple/: add-canonicalize.mlir  basic_ops.mlir  dce.mlir  dummy.mlir  fuse-mul-add.mlir  matmul.mlir  mul-canonicalize.mlir  mul-fold.mlir  neg-canonicalize.mlir  nnsimple-fuse-test.mlir  nnsimple-linalg-lowering.mlir  nnsimple-opt.mlir  nnsimple-pass-plugin.mlir  nnsimple-plugin.mlir  nnsimple-translate.mlir  quantized-type.mlir  sub-lowering.mlir  sub-ops.mlir
test/python/: smoketest.py
