# Part of the LLVM Project, under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
# Copyright (c) 2025.

[project]
name = "nnsimple-python-bindings"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.5, <=2.1.2",
    "PyYAML>=5.4.0, <=6.0.1",
    "ml_dtypes>=0.1.0, <=0.6.0; python_version<'3.13'",
    "ml_dtypes>=0.5.0, <=0.6.0; python_version>='3.13'",
]

[project.urls]
Homepage = "https://github.com/llvm/llvm-project"
Discussions = "https://discourse.llvm.org/"
"Issue Tracker" = "https://github.com/llvm/llvm-project/issues?q=is%3Aissue%20state%3Aopen%20label%3Amlir%3Apython%20"
"Source Code" = "https://github.com/llvm/llvm-project/tree/main/mlir/python"

[build-system]
requires = [
    "scikit-build-core>=0.10.7",
    "typing_extensions>=4.12.2",
    "nanobind>=2.9, <3.0",
]
build-backend = "scikit_build_core.build"
